# optapy

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.adoc  README.md  apt.txt  fix-coverage-paths.py  index.ipynb  pom.xml  requirements.txt  run-graal.sh  run-jpype.sh  run.sh  setup.py  sonar-project.properties  tox.ini
optapy-core/: .gitignore  MANIFEST.in  README.md  VERSION  build.sh  create-stubs.py  generate-stubs.sh  pom.xml  pyproject.toml  setup.cfg  setup.py  tox.ini
optapy-core/optapy-java-stubs/: .gitignore  MANIFEST.in  setup.py
optapy-core/optapy-jpype-stubs/: .gitignore  MANIFEST.in  setup.py
optapy-core/optapy-optaplanner-stubs/: .gitignore  MANIFEST.in  setup.py
optapy-core/src/main/assembly/: assembly-optapy-jar-distribution.xml
optapy-core/src/main/python/: __init__.py  __main__.py  annotations.py  constraint_stream.py  constraint_translator.py  jpype_type_conversions.py  optaplanner_api_wrappers.py  optaplanner_java_interop.py  optaplanner_python_logger.py  python_to_java_bytecode_translator.py  types.py
optapy-core/src/main/python/config/: __init__.py
optapy-core/src/main/python/constraint/: __init__.py
optapy-core/src/main/python/score/: __init__.py
optapy-core/src/main/python/test/: __init__.py
optapy-core/src/main/python/types/: __init__.py  types.py
optapy-core/src/main/resources/: logback.xml
optapy-core/tests/: optapy_test.py  solverConfig-redefined.xml  solverConfig-simple.xml  test_anchors.py  test_cloning.py  test_collectors.py  test_custom_shadow_variables.py  test_domain.py  test_easy_score_calculator.py  test_incremental_score_calculator.py  test_inverse_relation.py  test_java_cs_methods.py  test_joiners.py  test_pinning.py  test_setup.py  test_solver_config.py  test_solver_events.py  test_solver_manager.py  test_user_error.py
(+1110 files in other folders)
