[metadata]
name = optapy
version = file: VERSION
license = Apache License Version 2.0
license_file = LICENSE
description = An AI constraint solver that optimizes planning and scheduling problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/optapy/optapy
project_urls =
    'OptaPy Homepage' = https://optapy.org
    'OptaPlanner Homepage' = https://www.optaplanner.org/
    'OptaPlanner Documentation' = https://www.optaplanner.org/learn/documentation.html
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Java Libraries
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
python_requires = >= 3.9
packages =
    optapy
    optapy.types
setup_requires =
    setuptools
package_dir =
    optapy = src/main/python
install_requires =
    JPype1
